// Copyright 2016 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1;

option go_package="istio.io/mixer/api/v1;mixerpb";

import "google/rpc/status.proto";

// Used to verify preconditions before performing an action.
message CheckRequest {
  // Index within the stream for this request, used to match to responses
  int64 request_index = 1;

  // The set of discovered facts associated with this request. This value
  // represents a delta relative to the facts currently known to the mixer
  // within the current stream.
  map<string, string> facts = 2;
}

message CheckResponse {
  // Index of the request this response is associated with
  int64 request_index = 1;

  // Indicates whether or not the preconditions succeeded
  google.rpc.Status result = 2;
}
