// Copyright 2016 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1;

option go_package="istio.io/mixer/api/v1;mixerpb";

import "attributes.proto";
import "google/rpc/status.proto";

// Used to report telemetry after performing an action.
message ReportRequest {
  // Uniquely identifies this request, used to match to responses
  int64 request_id = 1;

  // The set of attributes associated with this request. This value represents
  // a delta relative to the attributes currently known to the mixer within
  // the current stream.
  Attributes attributes = 2;
}

message ReportResponse {
  // Identifies the request this response is associated with
  int64 request_id = 1;

  // Indicates whether the report was processed or not
  google.rpc.Status result = 2;
}
